tests/machine/x/lua/partial_application.error
line 22: run error: exit status 1
lua: ...kspace/mochi/tests/machine/x/lua/partial_application.lua:22: attempt to perform arithmetic on a nil value (local 'b')
stack traceback:
	...kspace/mochi/tests/machine/x/lua/partial_application.lua:22: in local 'add'
	...kspace/mochi/tests/machine/x/lua/partial_application.lua:24: in main chunk
	[C]: in ?

